--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,8 @@ footer {
 a {
   text-decoration: none !important;
   font-style: normal;
+  // color: #333;
+  font-weight: 400;
 }
 
 //---------Others  ---------
