--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,42 +1,69 @@
+<div class="page-content">
 
-<div class="container">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <%= @review.user.username %> 发表评测：《<%= link_to(@review.title, review_path(@review)) %>》
-      <div style="float:right">
-        <%= render :partial => "like", :locals => { :review => @review } %>
+  <main class="container main">
+
+    <section>
+      <h2 class="text-center">
+        <%= @review.title %>
+      </h2>
+      <div>
+        <% if current_user && @review.user == current_user %>
+          <%= link_to("edit", edit_knowledge_review_path(@review.knowledge, @review), class: "btn btn-warning btn-xs pull-right") %>
+          <%= link_to("delete", knowledge_review_path(@review.knowledge, @review), method: :delete, data: {:confirm => "删除后无法恢复，确定要删除吗？"}, class: "btn btn-danger btn-xs pull-right") %>
+        <% end %>
+
+        <article>
+          <div class="article-info">
+            <p>
+              <span>作者：<%= link_to @review.user.username, user_path(@review.user) %></span>
+              <span class="pull-right"><%= render :partial => "like", :locals => { :review => @review } %></span>
+            </p>
+            <p>
+              返回知识页面：<%= link_to(@review.knowledge.title, knowledge_path(@review.knowledge)) %>
+            </p>
+          </div>
+          <div class="article-content">
+            <%= sanitize(@review.content) %>
+          </div>
+        </article>
+
       </div>
-    </div>
-    <div class="panel-body">
-      <% if current_user && @review.user == current_user %>
-        <%= link_to("edit", edit_knowledge_review_path(@review.knowledge, @review), class: "btn btn-warning btn-xs pull-right") %>
-        <%= link_to("delete", knowledge_review_path(@review.knowledge, @review), method: :delete, data: {:confirm => "删除后无法恢复，确定要删除吗？"}, class: "btn btn-danger btn-xs pull-right") %>
-      <% end %>
-      <%= simple_format(@review.content) %>
-    </div>
-  </div>
 
-  <%= link_to("<- 返回知识 #{@review.knowledge.title} 页面", knowledge_path(@review.knowledge)) %>
+    </section>
 
-  <hr>
-  <div class="add-comment">
-    <%#= link_to("发表评论", new_review_comment_path(@review), class:"btn btn-default", remote: true) %>
-    <%= simple_form_for [ @review, @comment ], remote: true do |f| %>
-      <div class="form-group">
-        <%= f.input :content, class: "from-control" %>
+    <section>
+      <div class="add-comment">
+        <%#= link_to("发表评论", new_review_comment_path(@review), class:"btn btn-default", remote: true) %>
+        <%= simple_form_for [ @review, @comment ], remote: true do |f| %>
+          <div class="form-group">
+            <%= f.input :content, class: "from-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.submit "回复", class: "btn btn-primary" %>
+          </div>
+        <% end %>
       </div>
-      <div class="form-group">
-        <%= f.submit "回复", class: "btn btn-primary" %>
-      </div>
-    <% end %>
-  </div>
-  <hr>
+    </section>
 
-  <h4 id="comment-count">共有 <%= @review.comments_count %> 条评论</h4>
-  <div id="comment-list">
-    <% @comments.each do |comment| %>
-      <%= render :partial => "comments/comment", :locals => { :review => @review, :comment => comment } %>
-    <% end %>
-  </div>
+    <section>
+      <h4 id="comment-count">共有 <%= @review.comments_count %> 条评论</h4>
+      <div id="comment-list">
+        <% @comments.each do |comment| %>
+          <%= render :partial => "comments/comment", :locals => { :review => @review, :comment => comment } %>
+        <% end %>
+      </div>
+    </section>
+
+  </main>
 
 </div>
+
+
+<%= content_for :page_javascript do %>
+  <!-- <script type="text/javascript">
+  $("#comment_content").focus(function(){
+    var editor = new Simditor({ textarea: $('#comment_content'), toolbar: ['title', 'bold', 'italic', 'underline', 'strikethrough', 'color', '|', 'ol', 'ul', '|', 'markdown', 'blockquote', 'code', 'table', 'link','image', '|','hr', '|', 'marked', 'mark'],  placeholder: '这里输入提问内容...', pasteImage: true, fileKey: 'file', upload: { url: '/photos', params: null, connectionCount: 3, leaveConfirm: 'Uploading is in progress, are you sure to leave this page?' } });
+  }); -->
+
+  </script>
+<% end %>
