add logo & favicon

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,6 +70,17 @@ a {
 
 //---------Navbar---------
 
+.logo {
+  font-size: 32px;
+  vertical-align: middle;
+  margin-top: -5px;
+  color: #FF4500;
+}
+
+.navbar-header a {
+  color: white !important;
+}
+
 //---------Navbar End---------
 
 
