--- a/app/views/knowledges/new.html.erb
+++ b/app/views/knowledges/new.html.erb
@@ -1,3 +1,12 @@
-<h2>新增产品</h2>
-
-<%= render "form" %>
+<div class="page-content">
+  <div class="container">
+    <main>
+      <section>
+        <h2>推荐好知识</h2>
+      </section>
+      <section>
+        <%= render "form" %>
+      </section>
+    </main>
+  </div>
+</div>
