complete user_profile for this app

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@
  @import "font-awesome";
  @import "jquery.raty";
  @import "social-share-button";
+ @import "bootstrap-datepicker3";
 
 
  body {
