--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -36,6 +36,13 @@
       </div>
 
       <div class="form-group">
+        <label class="col-sm-2 control-label">用户名 *</label>
+        <div class="col-sm-10">
+          <%= f.text_field :username, class: "form-control" %>
+        </div>
+      </div>
+
+      <div class="form-group">
         <label class="col-sm-2 control-label">密码 *</label>
         <div class="col-sm-10">
           <%= f.password_field :password, class: "form-control" %>
