--- a/app/views/common/_admin_navbar.html.erb
+++ b/app/views/common/_admin_navbar.html.erb
@@ -38,7 +38,12 @@
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown">个人中心<b class="caret"></b></a>
               <ul class="dropdown-menu">
+                <li> <%= link_to "我的知识库", user_path(current_user) %></li>
+
+                <li> <%= link_to "编辑账户信息", edit_account_user_path %></li>
+
                 <li> <%= link_to "修改密码", account_password_path %></li>
+
                 <li> <%= link_to("登出", session_path(current_user), method: :delete) %> </li>
               </ul>
             </li>
