--- a/app/views/anwsers/new.html.erb
+++ b/app/views/anwsers/new.html.erb
@@ -1,3 +1,11 @@
-<p>问题：<%= @question.title %></p>
+<div class="page-content">
+  <div class="container">
+    <main>
+      <section>
+        <h3>问题：<%= @question.title %></h3>
 
-<%= render "form" %>
+        <%= render "form" %>
+      </section>
+    </main>
+  </div>
+</div>
