--- a/app/views/discussions/like.js.erb
+++ b/app/views/discussions/like.js.erb
@@ -1,2 +1,2 @@
-str = '<span id="discussion-<%= @discussion.id %>-like"><%= link_to unlike_discussion_path(@discussion), method: :post, remote: true do  %><i class="fa fa-heart" aria-hidden="true"></i>(<%= @discussion.reload.likes_count %>)<% end %></span>'
+str = '<span id="discussion-<%= @discussion.id %>-like" class="like"><%= link_to unlike_discussion_path(@discussion), method: :post, remote: true, class: "liked"  do  %><i class="fa fa-heart" aria-hidden="true"></i> <%= @discussion.reload.likes_count %><% end %></span>'
 $("#discussion-<%= @discussion.id %>-like").replaceWith(str)
