--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -8,23 +8,7 @@
           <%= link_to("提问题", new_knowledge_question_path(@knowledge), class: "btn btn-default") %>
           <div class="questions-list">
             <% @questions.each do |question| %>
-              <div class="panel panel-default">
-                <div class="panel-heading">
-                  <%= link_to question.user.username, user_path(question.user) %> 提出问题：《<%= link_to(question.title, knowledge_question_path(@knowledge, question)) %>》
-                  <!-- <a href="#">
-                    <i class="fa fa-heart" aria-hidden="true"></i><span>(10)</span>
-                  </a>  -->
-                  <span class="pull-right"><%= question.anwsers_count %>人回答</span>
-                </div>
-                <div class="panel-body">
-                  <%= link_to("我来回答", new_question_anwser_path(question), class: "btn btn-default btn-xs pull-right") %>
-                  <% if current_user && question.user == current_user %>
-                    <%= link_to("edit", edit_knowledge_question_path(@knowledge, question), class: "btn btn-warning btn-xs pull-right") %>
-                    <%= link_to("delete", knowledge_question_path(@knowledge, question), method: :delete, data: {:confirm => "删除后无法恢复，确定要删除吗？"}, class: "btn btn-danger btn-xs pull-right") %>
-                  <% end %>
-                  <%= sanitize question.description %>
-                </div>
-              </div>
+              <%= render partial: 'questions/question_item', :collection => @questions, :as => :question %>
             <% end -%>
           </div>
         </section>
