--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -5,25 +5,10 @@
         <%= render 'knowledges/show_header' %>
 
         <section class="knowledge-review">
-
           <%= link_to("写评测", new_knowledge_review_path(@knowledge), class: "btn btn-default") %>
           <div class="reviews-list">
             <% @reviews.each do |review| %>
-              <div class="panel panel-default">
-                <div class="panel-heading">
-                  <%= link_to review.user.username, user_path(review.user) %> 发表评测：《<%= link_to(review.title, review_path(review)) %>》
-                  <div style="float:right">
-                    <%= render :partial => "reviews/like", :locals => { :review => review } %>
-                  </div>
-                </div>
-                <div class="panel-body">
-                  <% if current_user && review.user == current_user %>
-                    <%= link_to("edit", edit_knowledge_review_path(@knowledge, review), class: "btn btn-warning btn-xs pull-right") %>
-                    <%= link_to("delete", knowledge_review_path(@knowledge, review), method: :delete, data: {:confirm => "删除后无法恢复，确定要删除吗？"}, class: "btn btn-danger btn-xs pull-right") %>
-                  <% end %>
-                  <%= simple_format(review.content) %>
-                </div>
-              </div>
+              <%= render partial: 'reviews/review_item', :collection => @reviews, :as => :review %>
             <% end -%>
           </div>
         </section>
