--- a/app/views/reviews/like.js.erb
+++ b/app/views/reviews/like.js.erb
@@ -1,2 +1,2 @@
-str = '<span id="review-<%= @review.id %>-like"><%= link_to unlike_review_path(@review), method: :post, remote: true do  %><i class="fa fa-heart" aria-hidden="true"></i>(<%= @review.reload.likes_count %>)<% end %></span>'
+str = '<span id="review-<%= @review.id %>-like" class="like"><%= link_to unlike_review_path(@review), method: :post, remote: true, class: "liked"  do  %><i class="fa fa-heart" aria-hidden="true"></i> <%= @review.reload.likes_count %><% end %></span>'
 $("#review-<%= @review.id %>-like").replaceWith(str)
