--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -7,11 +7,6 @@
         <%= @review.title %>
       </h2>
       <div>
-        <% if current_user && @review.user == current_user %>
-          <%= link_to("edit", edit_knowledge_review_path(@review.knowledge, @review), class: "btn btn-warning btn-xs pull-right") %>
-          <%= link_to("delete", knowledge_review_path(@review.knowledge, @review), method: :delete, data: {:confirm => "删除后无法恢复，确定要删除吗？"}, class: "btn btn-danger btn-xs pull-right") %>
-        <% end %>
-
         <article>
           <div class="article-info">
             <p>
@@ -19,14 +14,19 @@
               <span class="pull-right"><%= render :partial => "like", :locals => { :review => @review } %></span>
             </p>
             <p>
-              返回知识页面：<%= link_to(@review.knowledge.title, knowledge_path(@review.knowledge)) %>
+              返回知识页面：<b><%= link_to(@review.knowledge.title, knowledge_path(@review.knowledge)) %></b>
             </p>
           </div>
           <div class="article-content">
             <%= sanitize(@review.content) %>
           </div>
+          <span class="article-actions">
+            <% if current_user && @review.user == current_user %>
+              <%= link_to(content_tag(:i, "",class:'fa fa-pencil'), edit_knowledge_review_path(@review.knowledge, @review), class: "pull-right") %>
+              <%= link_to(content_tag(:i, "",class:'fa fa-trash'), knowledge_review_path(@review.knowledge, @review), method: :delete, data: {:confirm => "删除后无法恢复，确定要删除吗？"}, class: "pull-right", style:"margin: 0 1em; color: red;") %>
+            <% end %>
+          </span>
         </article>
-
       </div>
 
     </section>
