change star to mark

--- a/app/assets/stylesheets/knowledges.scss
+++ b/app/assets/stylesheets/knowledges.scss
@@ -92,7 +92,13 @@ aside .to-buy {
   }
 }
 
-
+.bookmark a {
+  font-size: 32px;
+  color: #F08080;
+}
+.bookmark .marked {
+  color: #FF4500;
+}
 
 .like a {
   color: #F08080;
