--- a/app/views/knowledges/_show_header.html.erb
+++ b/app/views/knowledges/_show_header.html.erb
@@ -1,4 +1,7 @@
 <section class="heading">
+  <span class="bookmark pull-right">
+    <%= render "knowledges/mark" %>
+  </span>
   <h3><%= @knowledge.title %></h3>
   <small><%= @knowledge.subtitle %></small>
 </section>
